objects/FINS_Recruiting_Process__c.object
<CustomObject>
    <fields>
        <fullName>Applicant_Name__c</fullName>
        <label>Applicant Name</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recruiting_Process_Stages__c</fullName>
        <label>Recruiting Process Stages</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Engagement</fullName>
                </value>
                <value>
                    <fullName>Diligence</fullName>
                </value>
                <value>
                    <fullName>Illustrations</fullName>
                </value>
                <value>
                    <fullName>Approvals</fullName>
                </value>
                <value>
                    <fullName>Finalize</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage_Completion__c</fullName>
        <label>Stage Completion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <label>Recruiting Process</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Recruiting_Process_Stages__c</columns>
        <columns>Stage_Completion__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Recruiting Process Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Recruiting Process</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>